diesel_compile_tests/tests/fail/returning_clause_requires_selectable_expression.stderr
error[E0277]: the trait bound `non_users::columns::noname: SelectableExpression<users::table>` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:27:20
    |
27  |         .returning(non_users::columns::noname);
    |          --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `non_users::columns::noname`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `SelectableExpression<QS>`:
              <non_users::columns::noname as SelectableExpression<JoinOn<Join, On>>>
              <non_users::columns::noname as SelectableExpression<Only<non_users::table>>>
              <non_users::columns::noname as SelectableExpression<SelectStatement<FromClause<From>>>>
              <non_users::columns::noname as SelectableExpression<non_users::table>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
note: required by a bound in `DeleteStatement::<T, U>::returning`
   --> $DIESEL/src/query_builder/delete_statement/mod.rs
    |
    |         E: SelectableExpression<T>,
    |            ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `DeleteStatement::<T, U>::returning`

error[E0277]: the trait bound `non_users::columns::noname: SelectableExpression<users::table>` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:27:10
    |
27  |         .returning(non_users::columns::noname);
    |          ^^^^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `non_users::columns::noname`
    |
    = help: the following other types implement trait `SelectableExpression<QS>`:
              <non_users::columns::noname as SelectableExpression<JoinOn<Join, On>>>
              <non_users::columns::noname as SelectableExpression<Only<non_users::table>>>
              <non_users::columns::noname as SelectableExpression<SelectStatement<FromClause<From>>>>
              <non_users::columns::noname as SelectableExpression<non_users::table>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
    = note: required because of the requirements on the impl of `Query` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>, diesel::query_builder::returning_clause::ReturningClause<non_users::columns::noname>>`
note: required by a bound in `DeleteStatement::<T, U>::returning`
   --> $DIESEL/src/query_builder/delete_statement/mod.rs
    |
    |         DeleteStatement<T, U, ReturningClause<E>>: Query,
    |                                                    ^^^^^ required by this bound in `DeleteStatement::<T, U>::returning`

error[E0277]: the trait bound `non_users::columns::noname: SelectableExpression<users::table>` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:31:10
    |
31  |         .returning(non_users::columns::noname);
    |          ^^^^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `non_users::columns::noname`
    |
    = help: the following other types implement trait `SelectableExpression<QS>`:
              <non_users::columns::noname as SelectableExpression<JoinOn<Join, On>>>
              <non_users::columns::noname as SelectableExpression<Only<non_users::table>>>
              <non_users::columns::noname as SelectableExpression<SelectStatement<FromClause<From>>>>
              <non_users::columns::noname as SelectableExpression<non_users::table>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
    = note: required because of the requirements on the impl of `Query` for `InsertStatement<users::table, diesel::query_builder::insert_statement::ValuesClause<(DefaultableColumnInsertValue<ColumnInsertValue<users::columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &std::string::String>>>,), users::table>, diesel::query_builder::insert_statement::private::Insert, diesel::query_builder::returning_clause::ReturningClause<non_users::columns::noname>>`
note: required by a bound in `InsertStatement::<T, U, Op>::returning`
   --> $DIESEL/src/query_builder/insert_statement/mod.rs
    |
    |         InsertStatement<T, U, Op, ReturningClause<E>>: Query,
    |                                                        ^^^^^ required by this bound in `InsertStatement::<T, U, Op>::returning`

error[E0277]: the trait bound `non_users::columns::noname: SelectableExpression<users::table>` is not satisfied
   --> tests/fail/returning_clause_requires_selectable_expression.rs:35:10
    |
35  |         .returning(non_users::columns::noname);
    |          ^^^^^^^^^ the trait `SelectableExpression<users::table>` is not implemented for `non_users::columns::noname`
    |
    = help: the following other types implement trait `SelectableExpression<QS>`:
              <non_users::columns::noname as SelectableExpression<JoinOn<Join, On>>>
              <non_users::columns::noname as SelectableExpression<Only<non_users::table>>>
              <non_users::columns::noname as SelectableExpression<SelectStatement<FromClause<From>>>>
              <non_users::columns::noname as SelectableExpression<non_users::table>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, Inner>>>
              <non_users::columns::noname as SelectableExpression<query_source::joins::Join<Left, Right, LeftOuter>>>
    = note: required because of the requirements on the impl of `Query` for `UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::update_statement::changeset::Assign<diesel::query_builder::update_statement::changeset::ColumnWrapperForUpdate<users::columns::name>, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<non_users::columns::noname>>`
note: required by a bound in `UpdateStatement::<T, U, V>::returning`
   --> $DIESEL/src/query_builder/update_statement/mod.rs
    |
    |         UpdateStatement<T, U, V, ReturningClause<E>>: Query,
    |                                                       ^^^^^ required by this bound in `UpdateStatement::<T, U, V>::returning`
